@@ -68,6 +68,11 @@ Release date: TBA
 
   Closes #4681
 
+* Fix false negative for ``used-before-assignment`` when the variable is assigned
+  in an exception handler, but used outside of the handler.
+
+  Closes #626
+
 
 What's New in Pylint 2.9.6?
 ===========================
